--- a/RotatingBearingAPI/appsettings.json
+++ b/RotatingBearingAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
+    "ConnectionStrings": {
+      "DefaultConnectionString": "Data Source=.;Initial Catalog=RotatingBearingDB;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    },
+  
   "AllowedHosts": "*"
 }
