--- a/RotatingBearingUITest/RotatingBearingUITest.csproj
+++ b/RotatingBearingUITest/RotatingBearingUITest.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="3.3.1" />
+    <PackageReference Include="IgniteUI.Blazor.Trial" Version="24.2.92" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
